<resources>
    <string name="app_name">JavaLabs</string>
    <string name="helloMsg">Hello World</string>
    <string name="btnTxt">I\'m a Button</string>
    <string name="userNameMsg">UserName</string>
    <string name="passwordMsg">Password</string>
    <string name="switchMsg">What does this do?</string>
    <string name="checkMsg">Checkbox</string>
    <string name="radioMsg">Radiobutton</string>
    <string name="loginBtnTxt">Login</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_msg">Would you like to quit?</string>
    <string name="dialog_title">Quit?</string>
    <string name="title_activity_chat_window">ChatWindow</string>
    <string name="sChatBtn">Start Chat</string>
    <string name="sendBtn">Send</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="wBtn">Check Weather</string>
    <string name="messageText">Message = </string>
    <string name="messageDetails">Message ID = </string>
</resources>
